feat(doc): #2994.222 add refs to some rules
- Added ASVS references to R062, R302, R046 and R181
- Added CWE reference to R046
- Added a Description to R302
- Updated R302 and R046 keywords
- Fixed some minor typos


Former-commit-id: 003f9b50d6be66fe3fb24a5a88d8ab51e3b1749c

--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -93,3 +93,8 @@ overflow protections and warnings,
 including stack randomization, data execution prevention,
 and to break the build if an unsafe pointer, memory, format string, integer,
 or string operations are found.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.1 Build.(14.1.3)]
+Verify that server configuration is hardened as per the recommendations of the
+application server and frameworks in use.
