feat(doc): #2994.223 add refs to some rules
- Added ASVS references to R122, R302, R262, R171, R142 and R266
- Added CWE references to R122
- Added GDPR reference to R122
- Updated R122 and R171 keywords
- Adjusted R122 for coverage
- Moved R122 to the Authentication category
- Fixed some minor typos


Former-commit-id: 82b02de1fd7c393b957920a01464440731f9f0f6

--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -76,4 +76,11 @@ V2.10 Service Authentication Requirements.(2.10.2)]
 Verify that if passwords are required,
 the credentials are not a default account.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.2 Dependency.(14.2.2)]
+Verify that all unneeded features, documentation, samples, configurations are
+removed,
+such as sample applications, platform documentation, and default or example
+users.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
