--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -86,3 +86,10 @@ Verify that old versions of *SSL* and *TLS* protocols, algorithms, ciphers, and
 configuration are disabled,
 such as *SSLv2*, *SSLv3*, or *TLS* 1.0 and *TLS* 1.1.
 The latest version of *TLS* should be the preferred cipher suite.
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.2 Dependency.(14.2.2)]
+Verify that all unneeded features, documentation, samples, configurations are
+removed,
+such as sample applications, platform documentation, and default or example
+users.
