--- a/content/pages/rules/source/171/index.adoc
+++ b/content/pages/rules/source/171/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/171/
 :category: source
 :description: This requirement establishes the importance of removing the commented-out code before deploying source code to the production environment.
-:keywords: Commented-out, Code, Source, Production, Environment, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Commented-out, Code, Source, Production, Environment, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R171. Remove commented-out code
@@ -21,3 +21,10 @@ when it is deployed to the production environment.
 Commented-out Code].
 A function, method, procedure, etc. contains an excessive amount of code
 that has been commented out within its body.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.2 Dependency.(14.2.2)]
+Verify that all unneeded features, documentation, samples, configurations are
+removed,
+such as sample applications, platform documentation, and default or example
+users.
