--- a/content/pages/rules/source/302/index.adoc
+++ b/content/pages/rules/source/302/index.adoc
@@ -35,9 +35,14 @@ The software imports, requires, or includes executable functionality
 (such as a library) from a source that is outside of the intended control
 sphere.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.1 Build.(14.1.2)]
 Verify that the application, configuration, and all dependencies can be
 re-deployed using automated deployment scripts,
 built from a documented and tested runbook in a reasonable time,
 or restored from backups in a timely fashion.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.2 Dependency.(14.2.1)]
+Verify that all components are up to date, preferably using a dependency
+checker during build or compile time.
