--- a/content/pages/rules/out-of-scope/architecture/068/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/068/index.adoc
@@ -3,6 +3,7 @@
 :description: This requirement establishes that the organization must identify the tested components after performing the white box testing.
 :keywords: Component, Identify, Test, White Box, Define, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
+:extended: yes
 
 = R068. Identify tested components
 
