feat(doc): #2994.226 add refs to some rules
- Added ASVS references to R324, R029 and R175
- Added CWE references to R175 and R029
- Added a Description to R175
- Updated R175 keywords


Former-commit-id: 959c9393719fe07d028353e9d950d7d863cacaa8

--- a/content/pages/rules/architecture/324/index.adoc
+++ b/content/pages/rules/architecture/324/index.adoc
@@ -82,3 +82,8 @@ V12.6 SSRF Protection Requirements.(12.6.1)]
 Verify that the web or application server is configured with a whitelist of
 resources or systems to which the server can send requests or load data/files
 from.
+
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.4 HTTP Security Headers Requirements.(14.4.6)]
+Verify that a suitable "**Referrer-Policy**" header is included,
+such as "**no-referrer**" or "**same-origin**".
