refac(doc): #3530 values fix email address
- The email address on Values page was fixed.


Former-commit-id: 50f4bbd7c5a8146d03d86c3ffde0332ad7f16ebc

--- a/content/pages/values/index.adoc
+++ b/content/pages/values/index.adoc
@@ -104,4 +104,4 @@ the risks associated with our client's information.
 == 6. Problems and Complaints
 
 All matters related to the breach of our values
-can be reported through ethic@fluidattacks.com
+can be reported through ethics@fluidattacks.com
