--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -93,3 +93,8 @@ Verify that all unneeded features, documentation, samples, configurations are
 removed,
 such as sample applications, platform documentation, and default or example
 users.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V14.5 Validate HTTP Request Header Requirements.(14.5.1)]
+Verify that the application server only accepts the *HTTP* methods in use by
+the application or *API*, including pre-flight *OPTIONS*.
