--- a/content/blog/reversing-vulnserver/index.adoc
+++ b/content/blog/reversing-vulnserver/index.adoc
@@ -37,10 +37,10 @@ have access to the code.
 
 == Vulnserver first analysis
 
-The first thing to do is a binary reconnaissance of `vulnserver.exe`. The
-tools we'll be using during this article are a debugger (`x64dbg`) and
-a reverse engineering framework (`radare2`), the later using the `Cutter`
-GUI.
+The first thing to do is a binary reconnaissance of `vulnserver.exe`.
+The tools we'll be using during this article are a debugger (`x64dbg`)
+and a reverse engineering framework (`radare2`),
+the latter using the `Cutter` GUI.
 
 To check the initial characteristics of `vulnserver.exe`, we can load it
 into `Cutter`:
@@ -48,10 +48,10 @@ into `Cutter`:
 image::basic1.gif[Basic info]
 
 As you can see, there's some information about the file, namely the type,
-(`PE32`), OS information, etc.
+the class (`PE32`), OS information, etc.
 
-One of the things to notice are the libraries used by `vulnserver.exe`.
-They are:
+Among the things to notice are the libraries used by `vulnserver.exe`.
+They are the following:
 
 . `essfunc.dll`
 . `kernel32.dll`
@@ -59,10 +59,10 @@ They are:
 . `ws2_32.dll`
 
 That means that `vulnserver.exe` uses functions which are located directly
-or indirectly on those libraries. That information is retrieved from the
+or indirectly in those libraries. That information is retrieved from the
 `IAT` (Import Address Table) of the `PE` (Portable Executable) header.
 
-To see what are the functions used by `vulnserver.exe` in `Cutter`, we
+To see the functions used by `vulnserver.exe` in `Cutter`, we
 can go to the `Imports` tab:
 
 image::unsafe1.gif[Imports]
@@ -71,8 +71,8 @@ Look at that. Some functions were marked as `Unsafe` by `Cutter`. Those
 functions are commonly the cause of vulnerabilities like Buffer Overflow.
 We will check that later.
 
-We must also check what are the security characteristics of the executable
-modules of `vulnserver.exe`. By checking that, we should be able to
+We must also check what the security characteristics of the executable
+modules of `vulnserver.exe` are. By checking that, we should be able to
 anticipate restrictions for our exploitation phase.
 
 To check that information, we can use our debugger. We will load
@@ -142,8 +142,8 @@ For the sake of this exercise, I will be reversing only the `KSTET` and
 == Reversing KSTET command
 
 On the main loop, `vulnserver` checks if the received buffer contains
-`KSTET` and if it does, it will divert the loop and will enter the `KSTET`
-flow:
+`KSTET`, and if it does,
+it will divert the loop and will enter the `KSTET` flow:
 
 image::kstet1.png[KSTET 1]
 
@@ -154,7 +154,7 @@ image::kstet2.png[KSTET 2]
 . It will allocate `0x64` or 100 bytes of dynamic memory.
 . The pointer to that region is saved in a var I renamed to `KstetBuffer`.
 . Then `strncpy()` will copy up to 100 bytes from the `ReceivedBuffer`
-to `KstetBuffer`. It `ReceivedBuffer` is more than 100 bytes long,
+to `KstetBuffer`. If `ReceivedBuffer` is more than 100 bytes long,
 `strncpy()` will discard the remaining bytes.
 . Then the `0x1000` or 4096 bytes of `ReceivedBuffer` is set to `0` using
 `memset()`.
@@ -189,7 +189,7 @@ Let's check it:
 
 image::kstet4.gif[KSTET 4]
 
-Great! We were able to overwrote `EBP` and `EIP` registers with our values.
+Great! We were able to overwrite `EBP` and `EIP` registers with our values.
 That was an easy one.
 
 == Reversing TRUN command
@@ -204,7 +204,7 @@ To get clear references later, I renamed the `s1` parameter to
 
 image::trun1-1.png[TRUN is found]
 
-The first thing it does is to allocate 3000 bytes of dynamic memory using
+The first thing it does is allocate 3000 bytes of dynamic memory using
 `malloc` and then set those 3000 bytes to `0`:
 
 image::trun2.png[TRUN memory alloc]
@@ -229,14 +229,14 @@ finish:
 
 image::trun-loop2.png[TRUN loop 2]
 
-If not, it will move the pointer on where the `TRUN` buffer command was
-set, and set the pointer 5 bytes forward to remove the `TRUN<space>` part.
-Then it compares the current position to `0x2e` which is the hex
+If not, it will move the pointer to where the `TRUN` buffer command was set
+and put the pointer 5 bytes forward to remove the `TRUN<space>` part.
+Then it compares the current position to `0x2e`, which is the hex
 representation of a dot (`.`):
 
 image::trun-loop3.png[TRUN loop 3]
 
-If the dot was found in the buffer, it will then copy the entire
+If the dot is found in the buffer, then it will copy the entire
 `ReceivedPayloadPtr` to a new variable called `dest` up to `3000` bytes,
 using `strncpy`.
 
@@ -325,9 +325,9 @@ Indeed! We were able to identify the vulnerability on the `TRUN` command.
 
 == Inverse approach
 
-The examples above, use the known `vulnserver` command inputs to identify
+The examples above use the known `vulnserver` command inputs to identify
 the execution flow and characteristics of the vulnerable commands. That
-may be the most natural way to approach a reverse engineering session, since
+may be the most natural way to approach a reverse engineering session since
 it's the way the application processes user input.
 
 However, as we saw at the beginning, it's possible to get the unsafe
@@ -335,11 +335,11 @@ functions used by the application:
 
 image::unsafe2.png[Unsafe functions]
 
-We can work backwards from there, searching by cross references (X refs)
-to that functions. For instance, if we'd wanted to know the places on where
+We can work backward from there, searching by cross-references (X refs)
+to those functions. For instance, if we'd wanted to know the places on where
 the `strcpy()` function is used, we can look for the cross-references of
 that function on `Vulnserver`. Once we find those references, we can start
-walking in reverse to see if non validated user input reaches the call of
+walking in reverse to see if non-validated user input reaches the call of
 `strcpy()`:
 
 image::xrefs1.gif[Cross references]
@@ -351,11 +351,11 @@ cross-references.
 
 Vulnerabilities can be found using static, dynamic and interactive ways.
 Fuzzing is a dynamic approach to find vulnerabilities, but it is prone to
-overlook details of vulnerabilities. Using reverse engineering, we use
+overlook details of vulnerabilities. Using reverse engineering, we apply
 an interactive approach that, as you see, gives a full detailed view
 of the vulnerable software. If you take a look at the
 link:../vulnserver-kstet/[KSTET] and the link:../vulnserver-trun/[TRUN]
 articles, you can see that the analysis performed using reverse engineering
 matched the one using fuzzing, with some additional details. And remember
-that we use all link:../../products/drills/[those approaches] on
-Fluid Attacks to find vulnerabilities!
+that we use all link:../../products/drills/[these approaches] at
+`Fluid Attacks` to find vulnerabilities!
